--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
