--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.15.0",
+    "remask": "^1.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@types/react-input-mask": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
