--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.13",
+    "@radix-ui/react-dialog": "^1.0.5",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
