--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@phosphor-icons/react": "^2.0.13",
     "@radix-ui/react-dialog": "^1.0.5",
     "axios": "^1.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
