--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-floater": "",
     "react-hook-form": "^7.46.1",
+    "react-joyride": "^2.7.0",
     "react-router-dom": "^6.15.0",
     "zod": "^3.22.2"
   },
